<resources>
    <string name="app_name">Infobip RTC Showcase</string>
    <string name="logged_in_status">Logged in as %1$s</string>
    <string name="connection_error">Connection error: %1$s %2$s</string>
    <string name="webrtc_type">WebRTC</string>
    <string name="phone_type">Phone</string>
    <string name="room_type">Room</string>
    <string name="destination_input_label">Destination</string>
    <string name="audio">Audio</string>
    <string name="call_button_label">Call</string>
    <string name="video_call_button">Video call</string>
    <string name="call_phone_number_button_label">Call phone number</string>
    <string name="join_room_button_label">Join room</string>
    <string name="join_room_with_video">Join room with video</string>
    <string name="incoming_call_label">Incoming %1$s call from %2$s</string>
    <string name="accept_button_label">Accept</string>
    <string name="accept_video_button_label">Accept with video</string>
    <string name="decline_button_label">Decline</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="audio_quality">Audio quality</string>
    <string name="audio_device">Audio device</string>
    <string name="toggle_camera">Toggle camera</string>
    <string name="toggle_screen_share">Toggle screen share</string>
    <string name="flip_camera">Flip</string>
    <string name="hangup">Hangup</string>
    <string name="leave">Leave</string>
    <string name="number_of_participants_title">Participants: %1$d</string>
    <string name="remote_joining">%1$s (joining)</string>
    <string name="remote_muted">%1$s (muted)</string>
    <string name="remote_deafened">%1$s (deafened)</string>
    <string name="remote_talking">%1$s (talking)</string>
    <string name="calling_label">Calling…</string>
    <string name="ringing_label">Ringing…</string>
    <string name="in_call">In a call</string>
    <string name="joined_room">Joined room</string>
    <string name="rejoining_room">Rejoining room…</string>
    <string name="hangup_message">Hangup: %1$s</string>
    <string name="left_room">Left room: %1$s</string>
    <string name="error_message">Error: %1$s</string>
    <string name="local_videos">Local videos</string>
    <string name="remote_videos">Remote videos</string>
</resources>